--- a/django.conf
+++ b/django.conf
@@ -1,22 +1,20 @@
-upstream django {
-	server unix:/opt/django/app.sock;
-	}
 
-server {
-	listen 80 default_server;
-	charset utf-8;
-	client_max_body_size 75M;
+server {                                                                                                                                                                                                                                    
+        client_max_body_size 0;    
+		server_name gitlab.vialink.com.br;
+        add_header Strict-Transport-Security max-age=15768000;
+ 
+        location / {
+            proxy_read_timeout      300;
+            proxy_connect_timeout   300;
+            proxy_redirect          off;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+            proxy_set_header        Host              $http_host;
+            proxy_set_header        X-Real-IP         $remote_addr;
+            proxy_set_header        X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Frame-Options   SAMEORIGIN;
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_pass              http://localhost:8080;
+        }
 
-	location /media  {
-		alias /opt/django/persistent/media;  # your Django project's media files - amend as required
-	}
-
-	location /static {
-		alias /opt/django/volatile/static; # your Django project's static files - amend as required
-	}
-
-	location / {
-		uwsgi_pass django;
-		include /opt/django/uwsgi_params; # the uwsgi_params file you installed
-	}
 }
